syntax = "proto3";


option java_multiple_files = true;
option java_package = "ca.railway.timetableService1";
option java_outer_classname = "RailwayServiceImpl";

package timetableService1;

// Interface exported by the server.
service RailwayService {

	rpc viewPricing(RequestPrices) returns (Pricing) {} //Unary
	
	rpc viewTimetable(Stations) returns (stream TrainDetails) {} //Server Streaming
	
	rpc amenities(TrainNo) returns (TrainAmenities) {} //Unary

  //rpc calculate(CalculateRequest) returns (CalculateResponse) {}


  //rpc generateRandomNumbers(RandomRequest) returns (stream NumberResponse ) {}


  //rpc averageValues(stream NumberMessage) returns (CalculateResponse ) {}


  //rpc convertBase(stream ConvertMessage) returns (stream ConvertResponse ) {}

}


message RequestPrices{
	string request = 1;
}

message Pricing{
	string price = 1;
}



message Stations{
	string departStation = 1;
	string arrivalStation = 2;
}

message TrainDetails{
	string time = 1;
	float price = 2;
	int32 trainNo = 3;
	string msg = 4;
}

message TrainNo{
	int32 trainNo = 1;
}

message TrainAmenities{
	string catering = 1;
	string bikeSlot = 2;
	bool petsAllowed = 3;
}





//message ConvertMessage {
//	string number = 1;
//	int32 fromBase = 2;
//	int32 toBase = 3;
//}

//message ConvertResponse {
//	string number  = 1;
//	int32 base = 2;
//}

//message RandomRequest {
//	int32 numbers = 1;
//	int32 min = 2;
//	int32 max = 3;
//}


//message NumberResponse {
//	int32 number = 1;
//}



//message CalculateRequest {
//  float number1 = 1;
//  float number2 = 2;
//
//  enum Operation{
//
// 	ADDITION =0;
//  	SUBTRACTION=1;
//  	MULTIPLICATION=2;
//  	DIVISION=3;
//  }
//  Operation operation = 3;
//}


//message CalculateResponse {
//	float result = 1;
//	string message = 2;
//}


//message NumberMessage{
//	float number = 1;
//}
