syntax = "proto3";


option java_multiple_files = true;
option java_package = "ca.railway.bookingService2";
option java_outer_classname = "BookingServiceImpl";

package bookingService2;


// Interface exported by the server.
service BookingService {

	rpc login(LoginRequest) returns (LoginReply) {} //Unary
	
	rpc booking(stream BookingRequest) returns (BookingConfirmationMsg) {} //Client-side streaming

}


message LoginRequest{
	string username = 1;
	string password = 2;
}

message LoginReply{
	string message = 1;
}

message BookingRequest{
	int32 trainNo = 1;
	string specialRequest = 2;
}

message BookingConfirmationMsg{
	int32 bookingNo = 1;
	int32 trainNo = 2;
	string specialRequestReply = 3;
}